# xiaomi-camera-toolkit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: NAS部署指南.md  常见问题.md  配置说明.md
tests/: test_formats.py
xiaomi_camera_toolkit/: __init__.py  cleanup.py  cli.py  ffmpeg.py  formats.py  merge.py  models.py  timelapse.py
