[project]
name = "xiaomi-camera-toolkit"
version = "0.1.0"
description = "Multi-format Xiaomi camera timelapse and daily video Docker tool"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "xiaomi-camera-toolkit contributors" }]

[project.scripts]
xiaomi-camera-toolkit = "xiaomi_camera_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
